# dan-mx

./: PLAN.md  README.md  pyproject.toml
danmx/: __init__.py  codec.py  color.py  frame.py  net.py  rle.py  stream.py
esp32/: README.md  platformio.ini
esp32/lib/danmx/: danmx.cpp  danmx.h
esp32/src/: main.cpp
esp32/test/test_decoder/: test_decoder.cpp
examples/: demo.py  receiver.py  sender.py
tests/: test_codec.py  test_color.py  test_delta.py  test_mtu.py  test_net.py  test_rle.py  test_wire.py
